Fix aligning issue

--- a/keyform/static/keyform/css/home.css
+++ b/keyform/static/keyform/css/home.css
@@ -16,10 +16,8 @@
 }
 
 .title {
-<<<<<<< HEAD
     margin: auto;
     width: 60%;
-    margin-right: .5em;
     padding-top: 1em;
     text-align: center;
 }
